[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.coverage]
    [tool.coverage.run]
    source = ["src"]
    omit = [
        "*docs*",
        "*tests*",
    ]

    [tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        "if __name__ == '__main__':",
        "def __repr__",
        "def __str__",
    ]
