[metadata]
name = pyjams
description = pyjams: a general Python package with a wide variety of miscellaneous utility functions.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/mcuntz/pyjams
author = Matthias Cuntz, Juliane Mai, Stephan Thober, Arndt Piayda
author_email = mc@macu.de
maintainer = Matthias Cuntz
maintainer_email = mc@macu.de
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development
    Topic :: Utilities
project_urls =
    Documentation = https://mcuntz.github.io/pyjams/
    Source = https://github.com/mcuntz/pyjams
    Tracker = https://github.com/mcuntz/pyjams/issues
    Changelog = https://github.com/mcuntz/pyjams/blob/main/CHANGELOG.rst
    Conda-Forge = https://anaconda.org/conda-forge/pyjams

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy
    scipy
    matplotlib
    cftime
    netcdf4
    schwimmbad
    xlrd
    openpyxl
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests*
    docs*

[options.entry_points]
gui_scripts =
    dfgui = pyjams.jams.dfgui:main
console_scripts =
    get_era5 = pyjams.jams.get_era5:main
    get_isogsm2 = pyjams.jams.get_isogsm2:main
    delta_isogsm2 = pyjams.jams.delta_isogsm2:main

[options.extras_require]
doc =
    numpydoc>=1.1,<2
    jinja2>=2
    sphinx>=3
test =
    coverage[toml]>=5.2.1
    pytest>=6.0
    pytest-cov>=2.11.0
